hphp/hack/test/typecheck/records/record_multiple_inheritance.php
<?hh

abstract record A {}
abstract record B {}

record C extends A, B {}
